tests/transpiler/x/ocaml/group_by.error
File "tests/transpiler/x/ocaml/group_by.ml", line 4, characters 44-46:
4 |   let people = [[("name", "Alice"); ("age", 30); ("city", "Paris")]; [("name", "Bob"); ("age", 15); ("city", "Hanoi")]; [("name", "Charlie"); ("age", 65); ("city", "Paris")]; [("name", "Diana"); ("age", 45); ("city", "Hanoi")]; [("name", "Eve"); ("age", 70); ("city", "Paris")]; [("name", "Frank"); ("age", 22); ("city", "Hanoi")]] in
                                                ^^
Error: This expression has type int but an expression was expected of type
         string
